Fix the mocking